--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,11 +192,10 @@ img {
 
 .nav__logo,
 .nav__toggle{
-  color: var(--title-color);
-  font-weight: var(--font-medium);
+  width: 15%;
 }
-.nav__logo:hover{
-  color: var(--first-color);
+.nav__logo img:hover{
+  content: url("../../assets/img/ban04.png");
 }
 
 .nav__toggle{
@@ -421,12 +420,73 @@ img {
 }
 
 /*==================== ABOUT ====================*/
-.about__img {
-  width: 200px;
-  border-radius: .5rem;
+
+.a{
+  position: relative;
+  width: 320px;
+  height: 320px;
+  display: flex;
+  justify-content: center;
   justify-self: center;
   align-self: center;
+}
+.b{
+  transition: .7s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #380ed2;
+  /* 这里设置不规则边框，值可以自己随机调 */
+  border-radius: 38% 62% 63% 37%/ 41% 44% 56% 59%;
+  animation: b 10s infinite linear;
 
+}
+.b::after,.b::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 3px #380ed2 solid;
+  transition: .7s;
+  border-radius: 38% 62% 63% 37%/ 41% 44% 56% 59%;
+  animation: b 8s infinite linear;
+}
+.b::before{
+  animation: b 6s infinite linear;
+}
+@keyframes b{
+  0%{
+      transform: rotateZ(0);
+  }
+  100%{
+      transform: rotateZ(360deg);
+  }
+}
+.a:hover .b,
+.a:hover .b::before,
+.a:hover .b::after{
+  background-color: rgba(255,255,255,.3);
+}
+.c{
+  font-size: 40px;
+  color: black;
+  font-weight: 900;
+  /* 给文字添加白边框 */
+  /* -webkit-text-stroke: 1px #fff; */
+  line-height: 200px;
+}
+.d{
+  position: absolute;
+  width: 160px;
+  height: 80px;
+  top: 150px;
+  /* border: #fff 3px solid; */
+  /* background-image: url("nk.gif"); */
+  background-size: cover;
+}
+
+.about_img{
+  z-index: -20;
 }
 
 .about__description {
@@ -548,7 +608,11 @@ img {
 }
 
 .skills__vue{
-  width: 10%;
+  width: 60%;
+}
+
+.skills__vue3{
+  width: 40%;
 }
 
 .skills__java{
