--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -600,7 +600,7 @@ img {
 }
 
 .skills__css{
-  width: 50%;
+  width: 80%;
 }
 
 .skills__js{
@@ -608,19 +608,19 @@ img {
 }
 
 .skills__vue{
-  width: 60%;
+  width: 80%;
 }
 
 .skills__vue3{
-  width: 40%;
+  width: 30%;
 }
 
 .skills__java{
-  width: 70%;
+  width: 90%;
 }
 
 .skills__python{
-  width: 50%;
+  width: 30%;
 }
 
 .skills__close .skills__list {
@@ -1226,12 +1226,12 @@ img {
   .swiper-portfolio-icon {
       font-size: 3.5rem;
   }
-  .swiper-button-prev {
+  /* .swiper-button-prev {
       left: 3.5rem;
   }
   .swiper-button-next {
       right: 3.5rem;
-  }
+  } */
   .swiper-container-horizontal > .swiper-pagination-bullets {
       bottom: -4.5rem
   }
